...
    const val PASSWORD_FIELD = "login_password_field"
    const val LOGIN_BUTTON = "login_submit_button"
}
object ObservationsTestTags {
    const val SUBJECT_FIELD = "ObservationSubjectField"
    const val OBSERVATION_FIELD = "ObservationTextField"
    const val SUBMIT_BUTTON = "ObservationSubmitButton"
    const val SUCCESS_MODAL = "ObservationSuccessModal"
    const val ERROR_MODAL = "ObservationErrorModal"
}
object TemplateTestTags {
    const val ID_FIELD = "TemplateIdField"
    const val NAME_FIELD = "TemplateNameField"
    const val DESTINY_FIELD = "TemplateDestinyField"
    const val AUTHORIZATION_FIELD = "TemplateAuthorizationField"
    const val DESCRIPTION_FIELD = "TemplateDescriptionField"
    const val SUBMIT_BUTTON = "TemplateSubmitButton"
    const val SUCCESS_MODAL = "TemplateSuccessModal"
    const val VALIDATION_ERROR_MODAL = "TemplateValidationErrorModal"
}

object ReportViewTestTags {
    const val DROPDOWN_BUTTON = "ReportTypeDropdownButton"
    const val DROPDOWN_MENU = "ReportTypeDropdownMenu"
    fun dropdownItem(type: String) = "DropdownItem_$type" // Función para tags dinámicos
...
